# voxel-raster

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: ispc.cmake
src/: audio.cpp  audio.hpp  camera.glsl  camera.inl  draw_visbuffer.glsl  main.cpp  main.glsl  player.cpp  player.hpp  shade_visbuffer.glsl  shared.inl
src/renderer/: allocate_brick_instances.glsl  allocators.glsl  analyze_visbuffer.glsl  clear_draw_flags.glsl  composite.glsl  composite_compute_visbuffer.glsl  compute_rasterize.glsl  culling.glsl  debug_lines.glsl  debug_shapes.glsl  debug_shapes.inl  draw_visbuffer.glsl  gen_hiz.glsl  hiz.glsl  mesh_voxel_bricks.glsl  meshlet_allocator.glsl  post_processing.glsl  prepopulate_meshlets.cpp  prepopulate_meshlets.inl  rasterize.glsl  renderer.cpp  renderer.hpp  reset_meshlet_allocator.glsl  set_indirect_infos.glsl  shade_visbuffer.glsl  shared.inl  visbuffer.glsl
src/renderer/utilities/: async_pipeline_manager.hpp  common.hpp  gpu_context.cpp  gpu_context.hpp  gpu_task.hpp
src/renderer/voxel_rasterizer/: allocate_brick_instances.glsl  allocators.glsl  analyze_visbuffer.glsl  clear_draw_flags.glsl  compute_rasterize.glsl  culling.glsl  draw_visbuffer.glsl  gen_hiz.glsl  mesh_voxel_bricks.glsl  set_indirect_infos.glsl  shade_visbuffer.glsl  voxel_rasterizer.inl
src/renderer/voxel_raytracer/: rt.glsl  trace_primary.glsl  trace_shadow.glsl  voxel_raytracer.inl
src/utilities/: debug.cpp  debug.hpp  ispc_instrument.cpp  ispc_instrument.hpp  thread_pool.cpp  thread_pool.hpp
src/voxels/: defs.inl  generation.ispc  pack_unpack.inl  voxel_mesh.glsl  voxel_mesh.inl  voxel_world.cpp  voxel_world.hpp
src/voxels/generation/: common.hpp  generation.cpp  generation.hpp  generation.ispc
